# nao_pos_recorder

./: README.md  package.xml  setup.cfg  setup.py
launch/: pos_recorder.launch.py
nao_pos_recorder/: pos_recorder_node.py
